--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,10 @@ services:
     image: postgres:10.4
     container_name: fhirbase
     volumes:
-       - .volumes:/var/lib/postgresql/data
+       - .data:/var/lib/postgresql/data
     ports:
-      - "2345:5432"
+      - "${PGPORT}:5432"
     environment:
-      POSTGRES_USER: fhirbase
-      POSTGRES_DB: fhirbase
-      POSTGRES_PASSWORD: fhirbase
+      POSTGRES_USER: ${PGUSER}
+      POSTGRES_PASSWORD: ${PGPASSWORD}
+      POSTGRES_DB:   ${PGDATABASE}
