--- a/rload/Cargo.toml
+++ b/rload/Cargo.toml
@@ -12,3 +12,5 @@ postgres-binary-copy = "0.5.0"
 curl = "0.2.14"
 flate2 = "1.0"
 json = "0.11.13"
+serde_json = "1.0"
+streaming-iterator = "0.1.1"
