--- a/glide.yaml
+++ b/glide.yaml
@@ -2,7 +2,15 @@ package: fhirbase
 import:
 - package: github.com/json-iterator/go
   version: 1.1.5
-- package: github.com/lib/pq
-  version: v1.0.0
 - package: github.com/urfave/cli
   version: v1.20.0
+- package: github.com/rakyll/statik
+  version: v0.1.4
+- package: github.com/gobuffalo/packr
+  version: v1.13.3
+  subpackages:
+  - '...'
+- package: github.com/jackc/pgx
+  version: v3.2.0
+  subpackages:
+  - stdlib
