--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ services:
 script:
   - docker run -d --rm -p "36363:5432" -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=fhirbase postgres:10.4
   - bash -c 'while ! nc -z localhost 36363 ; do sleep 1 ; done'
-  - make
+  - GOOS=linux GOARCH=amd64 BINSUFFIX=linix-amd64 make
+  - GOOS=windows GOARCH=amd64 BINSUFFIX=win-amd64 make
+  - GOOS=darwin GOARCH=amd64 BINSUFFIX=mac-amd64 make
+
   - PGUSER=postgres PGPASSWORD=postgres PGDATABASE=fhirbase PGPORT=36363 make test
 
 before_install:
