--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
   - GOOS=darwin GOARCH=amd64 BINSUFFIX=-mac-amd64 make
 
 before_install:
-  - curl https://glide.sh/get | sh
+  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
   - go get github.com/tcnksm/ghr
 
 after_success:
