--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,5 +26,5 @@
   version = "0.2.0"
 
 [[constraint]]
-  name = "gopkg.in/cheggaaa/pb.v2"
-  version = "2.0.6"
+  name = "github.com/vbauerster/mpb"
+  version = "3.3.2"
