--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,7 @@
 [[constraint]]
   name = "github.com/vbauerster/mpb"
   version = "3.3.2"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
