--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ before_install:
   - go get github.com/tcnksm/ghr
 
 after_success:
-  - ghr --username fhirbase -r fhirbase-core --token $GITHUB_TOKEN --prerelease -replace --debug nightly-build bin/
+  - ghr --username fhirbase -r fhirbase --token $GITHUB_TOKEN --prerelease -replace --debug nightly-build bin/
