add logging to web command

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -3,7 +3,7 @@ FROM clkao/postgres-plv8:9.6-2.0
 RUN apt-get update -q && apt-get install -y -q wget
 
 RUN wget https://github.com/fhirbase/fhirbase-core/releases/download/nightly-build/fhirbase-linux-amd64 && \
-    mv fhirbase-linux-amd64 fhirbase && \
+    mv fhirbase-linux-amd64 fhirbase &&  \
     chmod +x fhirbase
 
 COPY bundle.ndjson.gzip .
@@ -18,7 +18,7 @@ RUN PGDATA=/pgdata /docker-entrypoint.sh postgres & until psql -U postgres -c '\
     done && \
     psql -U postgres -c 'create database fhirbase;' && \
     ./fhirbase -d fhirbase init && \
-    ./fhirbase -d fhirbase load --mode='insert' ./bundle.ndjson.gzip
+    ./fhirbase -d fhirbase load --mode=insert ./bundle.ndjson.gzip
 
 EXPOSE 3000
 
