travis: build 386 arch binaries for linux & win

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ script:
   - bash -c 'while ! nc -z localhost 36363 ; do sleep 1 ; done'
   - PGUSER=postgres PGPASSWORD=postgres PGDATABASE=fhirbase PGPORT=36363 make test
   - GOOS=linux GOARCH=amd64 BINSUFFIX=-linux-amd64 make
+  - GOOS=linux GOARCH=386 BINSUFFIX=-linux-386 make
   - GOOS=windows GOARCH=amd64 BINSUFFIX=-win-amd64.exe make
+  - GOOS=windows GOARCH=386 BINSUFFIX=-win-386.exe make
   - GOOS=darwin GOARCH=amd64 BINSUFFIX=-mac-amd64 make
 
 before_install:
