travis: don't use deploy functionality

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,4 @@ before_install:
 after_success:
   - "[ ! -z \"$TRAVIS_TAG\" ] && echo \"$TRAVIS_TAG\" > .version"
   - ghr_v0.12.0_linux_amd64/ghr --username fhirbase -r fhirbase --token $GITHUB_TOKEN --prerelease -replace --debug nightly-build bin/
-
-deploy:
-  provider: script
-  script: ghr_v0.12.0_linux_amd64/ghr --username fhirbase -r fhirbase --token $GITHUB_TOKEN -n $TRAVIS_TAG --debug $TRAVIS_TAG bin/
-  on:
-    tags: true
+  - "[ ! -z \"$TRAVIS_TAG\" ] && ghr_v0.12.0_linux_amd64/ghr --username fhirbase -r fhirbase --token $GITHUB_TOKEN -n $TRAVIS_TAG --debug $TRAVIS_TAG bin/"
