--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ script:
   - PGUSER=postgres PGPASSWORD=postgres PGDATABASE=fhirbase PGPORT=36363 make test
   - GOOS=linux GOARCH=amd64 BINSUFFIX=-linux-amd64 make
   - GOOS=linux GOARCH=386 BINSUFFIX=-linux-386 make
-  - GOOS=windows GOARCH=amd64 BINSUFFIX=-win-amd64.exe make
-  - GOOS=windows GOARCH=386 BINSUFFIX=-win-386.exe make
-  - GOOS=darwin GOARCH=amd64 BINSUFFIX=-mac-amd64 make
+  - GOOS=windows GOARCH=amd64 BINSUFFIX=-windows-amd64.exe make
+  - GOOS=windows GOARCH=386 BINSUFFIX=-windows-386.exe make
+  - GOOS=darwin GOARCH=amd64 BINSUFFIX=-darwin-amd64 make
 
 before_install:
   - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
