--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
   - bash -c 'while ! nc -z localhost 36363 ; do sleep 1 ; done'
   - PGUSER=postgres PGPASSWORD=postgres PGDATABASE=fhirbase PGPORT=36363 make test
 
-  - "[ ! -z \"$TRAVIS_TAG\" ] && echo \"$TRAVIS_TAG\" > .version"
+  - "[ ! -z \"$TRAVIS_TAG\" ] && echo \"$TRAVIS_TAG\" > .version || echo 'non-tag build'"
   - GOOS=linux GOARCH=amd64 BINSUFFIX=-linux-amd64 make
   - GOOS=linux GOARCH=386 BINSUFFIX=-linux-386 make
   - GOOS=windows GOARCH=amd64 BINSUFFIX=-windows-amd64.exe make
