--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - GOOS=windows GOARCH=386 BINSUFFIX=-windows-386.exe make
   - GOOS=darwin GOARCH=amd64 BINSUFFIX=-darwin-amd64 make
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - "[ ! -z \"$TRAVIS_TAG\" ] && make docker"
+  - "[ ! -z \"$TRAVIS_TAG\" ] && make docker || echo 'non-tag build'"
 
 before_install:
   - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
