--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ script:
   - GOOS=windows GOARCH=amd64 BINSUFFIX=-windows-amd64.exe make
   - GOOS=windows GOARCH=386 BINSUFFIX=-windows-386.exe make
   - GOOS=darwin GOARCH=amd64 BINSUFFIX=-darwin-amd64 make
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - "[ ! -z \"$TRAVIS_TAG\" ] && make docker || echo 'non-tag build'"
 
 before_install:
-  - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+  - curl -L https://github.com/tcnksm/ghr/releases/download/v0.12.0/ghr_v0.12.0_linux_amd64.tar.gz --output ghr.tar.gz && tar zxvf ghr.tar.gz
